--- a/readings/templates/readings/yearly.html
+++ b/readings/templates/readings/yearly.html
@@ -59,7 +59,9 @@
                                     <td rowspan="3" class="text-center no vert-bottom">
                                         {% with term.girls.0 as child %}
                                             <h4>{{ child.children }}</h4>
-                                            <br><img src="{{ child.children.photo.url }}" width="100">
+                                            {% if child.children.photo %}
+                                                <br><img src="{{ child.children.photo.url }}" width="100">
+                                            {% endif %}
                                         {% endwith %}
                                     </td>
                                     <td class="no"></td>
@@ -68,7 +70,9 @@
                                     <td rowspan="3" class="text-center no vert-bottom">
                                         {% with term.girls.1 as child %}
                                             <h4>{{ child.children }}</h4>
-                                            <br><img src="{{ child.children.photo.url }}" width="100">
+                                            {% if child.children.photo %}
+                                                <br><img src="{{ child.children.photo.url }}" width="100">
+                                            {% endif %}
                                         {% endwith %}
                                     </td>
                                     <td class="no"></td>
@@ -77,7 +81,9 @@
                                     <td rowspan="3" class="text-center no vert-bottom">
                                         {% with term.girls.2 as child %}
                                             <h4>{{ child.children }}</h4>
-                                            <br><img src="{{ child.children.photo.url }}" width="100">
+                                            {% if child.children.photo %}
+                                                <br><img src="{{ child.children.photo.url }}" width="100">
+                                            {% endif %}
                                         {% endwith %}
                                     </td>
                                 </tr>
@@ -163,7 +169,11 @@
                 {% for item in total %}
                     <tr>
                         <td class="vert-align" width="1%"><h4>{{ forloop.counter }}.</h4></td>
-                        <td class="vert-align"><img src="{{ item.children.photo.url }}" width="40"></td>
+                        <td class="vert-align">
+                            {% if item.children.photo %}
+                                <img src="{{ item.children.photo.url }}" width="40">
+                            {% endif %}
+                        </td>
                         <td class="vert-align"><h4>{{ item.children }}</h4></td>
                         <td class="vert-align text-right">{{ item.hours|floatformat }} hodin</td>
                     </tr>
